Fix pixel gap on mapbox popups

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -139,6 +139,10 @@ body {
   padding: 12px !important;
 }
 
+.mapboxgl-popup-tip {
+  margin: -1px;
+}
+
 .mapboxgl-ctrl-attrib a {
   color: #000 !important;
 }
